# irminsul

./: .gitignore  Cargo.toml  build.rs  flake.nix
nix/: nixos-module.nix
src/: app.rs  good.rs  main.rs  monitor.rs
