[package]
name = "irminsul"
version = "0.1.16"
authors = ["Konkers <konkers@konkers.net>"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
# Keep these in sync with dev-dependencies below
anime-game-data = { git = "https://github.com/konkers/anime-game-data", rev = "222bab5d8f3f7c5052360672a9d882e766e70062" }
flate2 = "1.1.9"
tokio = { version = "1.47.1", features = [
	"rt",
	"tokio-macros",
	"macros",
	"rt-multi-thread",
] }

anyhow = "1.0.99"
async-trait = "0.1.89"
async-watcher = "0.3.0"
auto-artifactarium = { git = "https://github.com/konkers/auto-artifactarium", rev = "fa768462e3dbe10294c9973b8a9ba7b8cbcdab8b" }
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
ctrlc = "3.4.7"
eframe = { version = "0.32", default-features = false, features = [
	"accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
	"default_fonts", # Embed the default egui fonts.
	"glow",          # Use the glow rendering backend. Alternative: "wgpu".
	"persistence",   # Enable restoring app state when restarting the app.
	"wayland",       # To support Linux (and CI)
	"x11",           # To support older Linux distributions (restores one of the default features)
] }
egui = "0.32"
egui-file-dialog = "0.11.0"
egui-notify = "0.20.0"
egui_extras = { version = "0.32.2", features = ["image", "svg", "webp"] }
egui_material_icons = "0.4.0"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
indexmap = "2.11.1"
log = "0.4.27"
notify = "5.2.0"
open = "5.3.2"
pcap = { version = "2.3.0", features = ["capture-stream"], optional = true }
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["gzip", "stream"] }
self_update = "0.42.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["alloc"] }
tempfile = "3.21.0"
tokio-util = "0.7.16"
tracing = { version = "0.1.41" }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
pktmon = { version = "0.6.2", features = ["tokio"] }
windows = { version = "0.61.3", features = [
	"Win32_System_Console",
	"Win32_System_Registry",
	"Win32_UI_Shell",
] }

[target.'cfg(unix)'.dependencies]
caps = "0.5.6"
libc = "0.2.177"

[build-dependencies]
# Keep these in sync with dependencies above
anime-game-data = { git = "https://github.com/konkers/anime-game-data", rev = "222bab5d8f3f7c5052360672a9d882e766e70062" }
flate2 = "1.1.9"
tokio = { version = "1.47.1", features = [
	"rt",
	"tokio-macros",
	"macros",
	"rt-multi-thread",
] }

winresource = "0.1.23"

[features]
default = ["pcap"]
pcap = ["dep:pcap"]
static-libpcap = ["pcap"]

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

# Uncomment for local debugging
# [patch."https://github.com/konkers/anime-game-data"]
# anime-game-data = { path = "../anime-game-data" }

# Uncomment for local debugging
# [patch."https://github.com/konkers/auto-artifactarium"]
# auto-artifactarium = { path = "../auto-artifactarium" }
